<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_spending">Spending</string>
    <string name="action_transaction">Transaction</string>
    <string name="action_categories">Categories</string>
    <string name="action_shop">Shop</string>
    <string name="action_report">Report</string>
    <string name="title_activity_activity_transaction">ActivityTransaction</string>

    <string name="app_name">FlipperSample</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">second</string>

</resources>
